--- a/Session 1/Numpy.ipynb
+++ b/Session 1/Numpy.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "PZAyQvN09yhu"
       },
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,22 @@
         "id": "u1_IpI_-FMmd",
         "outputId": "902ffa0b-c22c-4c9a-c235-e3a0c828060d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Integer Datatype: \n",
+            "int32\n",
+            "\n",
+            "Float Datatype: \n",
+            "float64\n",
+            "\n",
+            "Forcing a Datatype: \n",
+            "int64\n"
+          ]
+        }
+      ],
       "source": [
         "# Python Program to create\n",
         "# a data type object\n",
@@ -118,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,9 +162,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Array with Rank 1: \n",
+            " [1 2 3]\n",
+            "Array with Rank 2: \n",
+            " [[1 2 3]\n",
+            " [4 5 6]]\n",
+            "\n",
+            "Array created using passed tuple:\n",
+            " [1 3 2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Python program for\n",
         "# Creation of Arrays\n",
@@ -180,9 +210,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Initial Array: \n",
+            "[[-1.   2.   0.   4. ]\n",
+            " [ 4.  -0.5  6.   0. ]\n",
+            " [ 2.6  0.   7.   8. ]\n",
+            " [ 3.  -7.   4.   2. ]]\n",
+            "Array with first 2 rows and alternate columns(0 and 2):\n",
+            " [[-1.  0.]\n",
+            " [ 4.  6.]]\n",
+            "\n",
+            "Elements at indices (1, 3), (1, 2), (0, 1), (3, 0):\n",
+            " [0. 6. 2. 3.]\n"
+          ]
+        }
+      ],
       "source": [
         "# Python program to demonstrate\n",
         "# indexing in numpy array\n",
