--- a/BasicPythonLib/Scikit_Learn_Basics/sklearn_choosing_right_model.ipynb
+++ b/BasicPythonLib/Scikit_Learn_Basics/sklearn_choosing_right_model.ipynb
@@ -278,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +292,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b671c20432fcd147198c92e7f072af9e705f087eb990bee22b07f08caab9f630"
+   }
   }
  },
  "nbformat": 4,
